<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/tvWelcome"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="382dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvInstruction"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/tvStatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvStatsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/tvWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvWin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatsTitle" />

    <TextView
        android:id="@+id/tvDraw"
        android:layout_width="61dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvDraw"
        app:layout_constraintEnd_toStartOf="@+id/tvLose"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/tvWin"
        app:layout_constraintTop_toBottomOf="@+id/tvStatsTitle" />

    <TextView
        android:id="@+id/tvLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:text="@string/tvLose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatsTitle" />

    <TextView
        android:id="@+id/tvAnnouncement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDraw" />

    <ImageView
        android:id="@+id/ivPC"
        android:layout_width="75dp"
        android:layout_height="88dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAnnouncement"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/tvVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="serif"
        android:text="@string/tvVS"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivYou"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toEndOf="@+id/ivPC"
        app:layout_constraintTop_toBottomOf="@+id/tvAnnouncement" />

    <ImageView
        android:id="@+id/ivYou"
        android:layout_width="75dp"
        android:layout_height="90dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="68dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAnnouncement"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:text="@string/tvComputer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPC" />

    <TextView
        android:id="@+id/tvYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="92dp"
        android:text="@string/tvYou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivYou" />

    <ImageView
        android:id="@+id/ivPaper"
        android:layout_width="98dp"
        android:layout_height="85dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="52dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/ivRock"
        android:layout_width="105dp"
        android:layout_height="85dp"
        android:layout_marginBottom="52dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivScissors"
        app:layout_constraintStart_toStartOf="@+id/ivPaper"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/ivScissors"
        android:layout_width="104dp"
        android:layout_height="86dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="52dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/scissors" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstruction" />

</androidx.constraintlayout.widget.ConstraintLayout>